pkg/lang/testdata/ub/calls/valid/object-fields.ub
inputs: { a: { type: object({ p: { type: integer }, q: string }) } }
