pkg/lang/testdata/ub/calls/invalid/bare-call-object-field-default.ub
inputs: { a: { type: object({ p: { type: integer, default: pick() } }) } }
